<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Hedvig</string>
    <string name="debug_title">Hedvig debug app</string>
    <string name="button_open_marketing">Open marketing screen</string>
    <string name="button_open_logo">Open logo</string>
    <string name="button_open_logged_in">Open logged in screens</string>
    <string name="hint_edit_token">Enter your Hedvig Token here</string>
    <string name="button_save_inputs">Save inputs</string>
    <string name="open_referral_acceptance_page">Open referral acceptance page</string>
    <string name="open_claims_screen">Open claims screen</string>
</resources>
